@@ -16,13 +16,4 @@
   <include package=".utilities" />
   <include package=".viewlet" />
 
-  <!-- this is really lying, but it's to please checkContainer -->
-  <five:implements class="OFS.ObjectManager.ObjectManager"
-                   interface="zope.app.container.interfaces.IContainer" />
-
-  <!-- make Zope 2's REQUEST implement the right thing -->
-  <five:implements class="ZPublisher.HTTPRequest.HTTPRequest"
-                   interface="zope.publisher.interfaces.browser.IBrowserRequest"
-                   />
-
 </configure>
